removing ucsd logo (until I am officially there)

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ layout: default
       gmalecha at cs.harvard.edu
     </div>
     <div class="col-xs-4 col-sm-2 col-md-pull-0 text-center">
+{% comment %}
       <img src="https://festival.sdaff.org/2012/files/2012/09/UCSD.gif"
 	   height="80pt" />
       <br/><br/>
+{% endcomment %}
       <img src="http://www.people.fas.harvard.edu/~gmalecha/SEAS_logo.png"
 	   height="80pt" />
     </div>
