update my email addresss.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 	   src="http://www.people.fas.harvard.edu/~gmalecha/gregory.jpg"
 	   width="150pt" style="float:left; clear: left; margin-right: 10pt;"/>
       <h2>gregory malecha</h2>
-      gmalecha at cs.harvard.edu
+      gmalecha at gmail.com
     </div>
     <div class="col-xs-4 col-sm-2 col-md-pull-0 text-center">
       <img src="https://festival.sdaff.org/2012/files/2012/09/UCSD.gif"
