--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <div class="row">
     <div class="col-xs-offset-0 col-xs-8 col-sm-6 col-sm-offset-2">
       <img class="img-rounded"
-	   src="http://www.people.fas.harvard.edu/~gmalecha/gregory.jpg"
+	   src="{{ site.url }}/assets/gregory-malecha.jpg"
 	   width="150pt" style="float:left; clear: left; margin-right: 10pt;"/>
       <h2>gregory malecha</h2>
       gmalecha at gmail.com
@@ -15,7 +15,7 @@ layout: default
       <img src="https://festival.sdaff.org/2012/files/2012/09/UCSD.gif"
 	   height="80pt" />
       <br/><br/>
-      <img src="http://www.people.fas.harvard.edu/~gmalecha/SEAS_logo.png"
+      <img src="{{ site.url }}/assets/SEAS_logo.png"
 	   height="80pt" />
     </div>
     </div>
