remove harvard shield.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@ layout: default
       <img src="https://festival.sdaff.org/2012/files/2012/09/UCSD.gif"
 	   height="80pt" />
       <br/><br/>
-      <img src="{{ site.url }}/assets/SEAS_logo.png"
+<!--
+      <img src="http://www.seas.harvard.edu/sites/default/files/images/About%20SEAS/image_large.png"
 	   height="80pt" />
+-->
     </div>
     </div>
   </div>
