github and twitter links.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ layout: default
 	   src="{{ site.url }}/assets/gregory-malecha.jpg"
 	   width="150pt" style="float:left; clear: left; margin-right: 10pt;"/>
       <h2>gregory malecha</h2>
-      gmalecha at gmail.com
+      gmalecha at gmail.com<br />
+      <!-- Place this tag where you want the button to render. -->
+      <a class="github-button" href="https://github.com/gmalecha" aria-label="Follow @gmalecha on GitHub">Follow</a>
+      <a href="https://twitter.com/gregory_malecha" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @gregory_malecha</a>
     </div>
     <div class="col-xs-4 col-sm-2 col-md-pull-0 text-center">
       <img src="https://festival.sdaff.org/2012/files/2012/09/UCSD.gif"
@@ -27,12 +30,13 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col-xs-6 col-sm-4 col-sm-offset-2 col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-3">
-      <h2 class="text-center">ExtLib</h2>
+      <h2 class="text-center">ExtLib<a class="github-button" href="https://github.com/coq-ext-lib/coq-ext-lib" data-icon="octicon-star" aria-label="Star coq-ext-lib/coq-ext-lib on GitHub">Star</a></h2>
       <p class="text-center">ExtLib reinvisions the Coq standard library to be a little more Haskell like. It focuses on first-class abstractions, organized (rather than organic) library layout, and mostly non-dependent types.</p>
       <p class="text-center"><a class="btn btn-default" href="//github.com/coq-ext-lib/coq-ext-lib#" role="button">View details &raquo;</a></p>
     </div>
     <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
-      <h2 class="text-center">MirrorCore</h2>
+      <h2 class="text-center">MirrorCore
+	<a class="github-button" href="https://github.com/gmalecha/mirror-core" data-icon="octicon-star" aria-label="Star gmalecha/mirror-core on GitHub">Star</a></h2>
       <p class="text-center">MirrorCore is my thesis work on making computational reflection compositional. It features a higher-order extensible reflective language as well as a fully-reflective tactic language similar to Ltac.</p>
       <p class="text-center"><a class="btn btn-default" href="//github.com/gmalecha/mirror-core" role="button">View details &raquo;</a></p>
     </div>
@@ -45,3 +49,6 @@ layout: default
     </div>
   </div>
 </div>
+
+<script async defer>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
