--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@ layout: default
       <p class="text-center">MirrorCore is my thesis work on making computational reflection compositional. It features a higher-order extensible reflective language as well as a fully-reflective tactic language similar to Ltac.</p>
       <p class="text-center"><a class="btn btn-default" href="//github.com/gmalecha/mirror-core" role="button">View details &raquo;</a></p>
     </div>
-    <div class="col-lg-4">
-      {% comment %}
-      <h2 class="text-centered">Proof Forge</h2>
-      <p>Proof forge is a collection of tools for building proofs.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-      {% endcomment %}
+    <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
+      <h2 class="text-center">VeriDrone</h2>
+      <p class="text-center">In VeriDrone, we develop monitors for cyber-physical systems that guarantee that they adhere to certain safety policies.</p>
+      <p class="text-center"><a class="btn btn-default" href="//veridrone.ucsd.edu/" role="button">View details &raquo;</a></p>
     </div>
   </div>
 </div>
