--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-6 col-sm-4 col-sm-offset-2 col-md-4 col-lg-3 col-lg-offset-1">
+    <div class="col-xs-6 col-sm-4 col-sm-offset-2 col-md-offset-0 col-md-4 col-lg-3 col-lg-offset-1">
       <h2 class="text-center">ExtLib<a class="github-button" href="https://github.com/coq-ext-lib/coq-ext-lib" data-icon="octicon-star" aria-label="Star coq-ext-lib/coq-ext-lib on GitHub">Star</a></h2>
       <p class="text-center">ExtLib reinvisions the Coq standard library to be a little more Haskell like. It focuses on first-class abstractions, organized (rather than organic) library layout, and mostly non-dependent types.</p>
       <p class="text-center"><a class="btn btn-default" href="//github.com/coq-ext-lib/coq-ext-lib#" role="button">View details &raquo;</a></p>
