--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 col-lg-offset-1">
-      <h2 class="text-center">ExtLib<a class="github-button" href="https://github.com/coq-ext-lib/coq-ext-lib" data-icon="octicon-star" aria-label="Star coq-ext-lib/coq-ext-lib on GitHub">Star</a></h2>
+      <h2 class="text-center">ExtLib</h2>
       <p class="text-center">ExtLib reinvisions the Coq standard library to be a little more Haskell like. It focuses on first-class abstractions, organized (rather than organic) library layout, and mostly non-dependent types.</p>
       <p class="text-center"><a class="btn btn-default" href="//github.com/coq-ext-lib/coq-ext-lib#" role="button">View details &raquo;</a></p>
     </div>
     <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
-      <h2 class="text-center">MirrorCore
-	<a class="github-button" href="https://github.com/gmalecha/mirror-core" data-icon="octicon-star" aria-label="Star gmalecha/mirror-core on GitHub">Star</a></h2>
+      <h2 class="text-center">MirrorCore</h2>
       <p class="text-center">MirrorCore is my thesis work on making computational reflection compositional. It features a higher-order extensible reflective language as well as a fully-reflective tactic language similar to Ltac.</p>
       <p class="text-center"><a class="btn btn-default" href="//github.com/gmalecha/mirror-core" role="button">View details &raquo;</a></p>
     </div>
