non-secure link to veridrone.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
     <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
       <h2 class="text-center">VeriDrone</h2>
       <p class="text-center">In VeriDrone, we develop monitors for cyber-physical systems that guarantee that they adhere to certain safety policies.</p>
-      <p class="text-center"><a class="btn btn-default" href="//veridrone.ucsd.edu/" role="button">View details &raquo;</a></p>
+      <p class="text-center"><a class="btn btn-default" href="http://veridrone.ucsd.edu/" role="button">View details &raquo;</a></p>
     </div>
   </div>
 </div>
