--- a/games/jigsaw/index.html
+++ b/games/jigsaw/index.html
@@ -27,7 +27,7 @@ extra_js:
 	</div>
 	<div class="input-group">
 	  <div class="input-group-addon">URL</div>
-	  <input maxlength="2" type="text"
+	  <input type="text"
 		 class="form-control" placeholder="url"
 		 id="img_url" type="text" size="18"
 		 value="http://www.seas.harvard.edu/profdev/seal.jpg" />
