--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="jumbotron">
   <div class="container">
     <div class="row">
-    <div class="col-xs-offset-0 col-xs-8 col-sm-6 col-sm-offset-2">
+    <div class="col-xs-offset-0 col-xs-12 col-sm-6 col-sm-offset-2">
       <img class="img-rounded"
 	   src="{{ site.url }}/assets/gregory-malecha.jpg"
 	   width="150pt" style="float:left; clear: left; margin-right: 10pt;"/>
@@ -15,10 +15,11 @@ layout: default
       <a href="https://twitter.com/gregory_malecha" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @gregory_malecha</a>
     </div>
     <div class="col-xs-4 col-sm-2 col-md-pull-0 text-center">
+{% comment %}
       <img src="https://festival.sdaff.org/2012/files/2012/09/UCSD.gif"
 	   height="80pt" />
       <br/><br/>
-{% comment %}<!--
+<!--
       <img src="http://www.seas.harvard.edu/sites/default/files/images/About%20SEAS/image_large.png"
 	   height="80pt" />
 -->
