--- a/publications/index.html
+++ b/publications/index.html
@@ -1,24 +1,23 @@
 ---
-layout: page
+layout: page-wide
 title: Publications & Talks
 category: publication
 ---
 <div class="row">
-  <div class="col-md-12">
+  <div class="{{ site.layout.margin-class-wide }}">
     <table class="table">
       <tr><th>At</th>
-	  <th>Title</th>
-	  <th>Tags</th></tr>
+	  <th>Title</th></tr>
       {% for post in site.posts %}
       {% if post.categories contains "publication" or post.categories contains "talk" %}
       <tr><td>{% if post.where %}{{ post.where }}{% else %}{{ post.date | date: "%Y" }}{% endif %}</td>
-	  <td><a href="{{ post.url }}">{{ post.title }}</a></td>
-	  <td class="text-right">
+	  <td><a href="{{ post.url }}">{{ post.title }}</a>
+	    <div class="text-right">
 	    {% for tg in post.tags %}
-	    <span class="label label-default">{{ tg }}</span>
+	    <span class="tag label label-default">{{ tg }}</span>
 	    {% endfor %}
-	  </td>
-      </tr>
+	    </div>
+      </td></tr>
       {% endif %}
       {% endfor %}
       </tr>
