--- a/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.html
+++ b/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.html
@@ -14,6 +14,7 @@ abstract: |
 links:
 - download: /publications/files/malecha-dissertation.pdf
 - slides: /publications/files/malecha-defense.pdf
+- talk: /reflections/2016/03/22/extensible-proof-engineering-in-intensional-type-theory/
 tags:
 - mirror-core
 - rtac
