--- a/_posts/2016-01-23-formal-verification-of-stability-properties-in-cyber-physical-systems.html
+++ b/_posts/2016-01-23-formal-verification-of-stability-properties-in-cyber-physical-systems.html
@@ -3,7 +3,7 @@ layout: publication
 categories: publication
 title: Formal Verification of Stability Properties in Cyber-physical Systems
 authors: Matthew Chan, Daniel Ricketts, Sorin Lerner, Gregory Malecha
-where: DBPL'15
+where: CoqPL'16
 tags:
 - cyber-physical systems
 - veridrone
