citation for esop paper.

--- a/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.html
+++ b/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.html
@@ -22,3 +22,16 @@ links:
  - paper: /publications/files/rtac-esop16.pdf
  - conference link: http://www.etaps.org/index.php/2016/esop
 ---
+@inbook{malecha2016easy-and-efficient,
+author="Malecha, Gregory and Bengtson, Jesper",
+editor="Thiemann, Peter",
+chapter="Extensible and Efficient Automation Through Reflective Tactics",
+title="Programming Languages and Systems: 25th European Symposium on Programming, ESOP 2016, Held as Part of the European Joint Conferences on Theory and Practice of Software, ETAPS 2016, Eindhoven, The Netherlands, April 2-8, 2016, Proceedings",
+year="2016",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="532--559",
+isbn="978-3-662-49498-1",
+doi="10.1007/978-3-662-49498-1_21",
+url="http://dx.doi.org/10.1007/978-3-662-49498-1_21"
+}
