posting talks for esop and soscyps

--- a/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.html
+++ b/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.html
@@ -20,6 +20,7 @@ abstract: |
   We demonstrate the usability of Rtac through several case studies demonstrating orders of magnitude speedups for relatively little engineering work.
 links:
  - paper: /publications/files/rtac-esop16.pdf
+ - talk: /publications/files/rtac-esop16-talk.pdf
  - conference link: http://www.etaps.org/index.php/2016/esop
 ---
 @inbook{malecha2016easy-and-efficient,
