--- a/_posts/2016-04-11-towards-foundational-verification-of-cyber-physical-systems.html
+++ b/_posts/2016-04-11-towards-foundational-verification-of-cyber-physical-systems.html
@@ -16,5 +16,6 @@ abstract: |
   These features make proof assistants in general, and Coq in particular, a powerful platform for unifying foundational results about safety-critical systems and ensuring interesting properties at all levels of the stack.
 links:
  - paper: /publications/files/soscyps16.pdf
+ - talk: /publications/files/soscyps16-talk.pdf
  - conference link: http://publish.illinois.edu/science-of-security-lablet/science-of-security-for-cyber-physical-systems-workshop/
 ---
