fixing Ryan's last name.

--- a/_posts/2015-08-04-using-dependent-types-and-tactics-to-enable-semantic-optimization-of-language-integrated-queries.html
+++ b/_posts/2015-08-04-using-dependent-types-and-tactics-to-enable-semantic-optimization-of-language-integrated-queries.html
@@ -2,7 +2,7 @@
 layout: publication
 categories: publication
 title: Using Dependent Types and Tactics to Enable Semantic Optimization of Language-Integrated Queries
-authors: Gregory Malecha and Ryan Wisneskey
+authors: Gregory Malecha and Ryan Wisnesky
 where: DBPL'15
 tags:
 - coq
