large re-design

--- a/_posts/2016-04-11-towards-foundational-verification-of-cyber-physical-systems.html
+++ b/_posts/2016-04-11-towards-foundational-verification-of-cyber-physical-systems.html
@@ -2,7 +2,7 @@
 layout: publication
 category: publication
 title: Towards Foundational Verification of Cyber-physical Systems
-authors: Gregory Malecha and Daniel Ricketts and Mario M. Alvarez and Sorin Lerner
+authors: Gregory Malecha, Daniel Ricketts, Mario M. Alvarez, Sorin Lerner
 where: SoSCYPS'16
 tags:
 - coq
