--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ cards:
 title: Gregory Malecha
 ---
 
-{% assign posts = site.categories['reflections'] | sort: 'date' | reverse %}
+{% assign posts = site.posts | sort: 'date' | reverse %}
 {% for post in posts limit:5 %}
 <li class="card" style="margin-bottom: 20pt;">
   <div class="card-block">
@@ -29,141 +29,3 @@ title: Gregory Malecha
   </div>
 </li>
 {% endif %}
-
-
-{% comment %}
-<section class="container-fluid" style="margin-top: -20pt;">
-
-  <!--Card-->
-  <ul class="col-md-8">
-    {% assign posts = site.categories['reflections'] | sort: 'date' | reverse %}
-    {% for post in posts limit:5 %}
-    <li class="card" style="margin-bottom: 20pt;">
-      <div class="card-block">
-	<h4 class="card-title">{{ post.title }}</h4>
-	<small>{{ post.date | date: "%b %-d, %Y" }}</small>
-	<blockquote class="card-text">
-	  {{ post.excerpt | strip }}
-	</blockquote>
-	<a href="{{ post.url }}" class="btn btn-primary btn-floating btn-action circle">
-	  <i class="fa fa-arrow-right" aria-hidden="true"></i>
-	</a>
-      </div>
-    </li>
-    {% endfor %}
-    {% if posts.size > 5 %}
-    <li class="card" style="margin-bottom: 20pt;">
-      <div class="card-block">
-	more...
-      </div>
-    </li>
-    {% endif %}
-  </ul>
-  <div class="col-md-4">
-
-    {% include name-card.html %}
-
-    <div class="card">
-
-      <!--Card content-->
-      <div class="card-block">
-        <!--Title-->
-        <h4 class="card-title">Latest Publications</h4>
-        <!--Text-->
-        <p class="card-text">
-	  <ul class="truncating-children">
-	    {% assign posts = site.categories['publication'] | sort: 'date' | reverse %}
-	    {% for post in posts limit:5 %}
-	    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	    {% endfor %}
-	  </ul>
-	</p>
-      </div>
-      <!--/.Card content-->
-
-    </div>
-
-    <div class="card">
-
-      <a href="#" class="btn btn-primary btn-floating btn-action circle">
-	<i class="fa fa-arrow-right" aria-hidden="true"></i>
-      </a>
-
-
-      <!--Card content-->
-      <div class="card-block">
-        <!--Title-->
-        <h4 class="card-title">Projects</h4>
-        <!--Text-->
-        <p class="card-text">
-	  <ul>
-	    <li>Modular Deductive Verification of Sampled-Data Systems</li>
-	    <li>Towards Foundational Verification of Cyber-physical Systems</li>
-	  </ul>
-	</p>
-      </div>
-      <!--/.Card content-->
-
-    </div>
-    <!--/.Card-->
-  </div>
-</section>
-
-{% comment %}
-    <section id="blog" class="container">
-    <div class="row">
-      <div class="col-md-offset-1 col-md-10">
-          <h2><a href="/reflections/">Reflections <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></h2>
-	  <ul>
-	  {% assign posts = site.categories['reflections'] | sort: 'date' | reverse %}
-	  {% for post in posts %}
-	  <li><a href="{{ post.url }}">{{ post.title }}</a> on {{ post.date | date: "%b %-d, %Y" }}</li>
-	  {% endfor %}
-	  </ul>
-      </div>
-    </div>
-    </section>
-
-    <section id="projects" class="container">
-    <div class="row">
-      <div class="col-md-offset-1 col-md-10">
-        <h2>Projects</h2>
-	<div class="row">
-	  {% for proj in site.projects %}
-	  <div class="col-xs-6 col-md-4">
-	    {% if proj.img %}
-	    <img style="float: left; margin: 5pt; height: 80pt;" class="img-rounded" src="{{ proj.img }}" />
-	    {% endif %}
-	    <h3><a href="{{ proj.url }}">{{ proj.title }} <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></h3>
-	    {{ proj.descr }}
-	  </div>
-	  {% cycle 'xs' : '' , '<div class="clearfix visible-xs-block visible-sm-block"></div>' %}
-	  {% cycle 'md' : '', '' , '<div class="clearfix visible-lg-block visible-md-block"></div>' %}
-	  {% endfor %}
-	</div>
-      </div>
-    </div>
-    </section>
-
-    <section id="publications" class="container">
-    <div class="row">
-      <div class="col-md-offset-1 col-md-10">
-          <h2><a href="/publications/">Publications <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></h2>
-	  <ul>
-	  {% assign publications = site.categories['publication'] | sort: 'date' | reverse %}
-	  {% for post in publications limit:5 %}
-	  <li><a href="{{ post.url }}">{{ post.title }}</a> on {{ post.date | date: "%b %-d, %Y" }}</li>
-	  {% endfor %}
-	  {% assign publications_size = publications | size %}
-	  {% if publications_size > 5 %}
-	  <li><a href="{{ base_url }}/publications/">...more...</a></li>
-	  {% endif %}
-	  </ul>
-      </div>
-    </div>
-    </section>
-{% endcomment %}
-
-<script async defer>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
-{% endcomment %}
