--- a/projects/sliding/index.html
+++ b/projects/sliding/index.html
@@ -1,10 +1,11 @@
 ---
 category: games
-layout: page
+layout: default
 extra_css: css/slidingtile.css
 extra_js:
 - js/SlidingTile.js
 - js/script.js
+noheader: true
 ---
 
 <center>
