a few bits of cleanup

--- a/_posts/2016-03-22-extensible-proof-engineering-in-intensional-type-theory.html
+++ b/_posts/2016-03-22-extensible-proof-engineering-in-intensional-type-theory.html
@@ -4,6 +4,11 @@ category: reflections
 author: gregory malecha
 title: |
   PhD Defense: Extensible Proof Engineering in Intensional Type Theory
+tags:
+- coq
+- computational reflection
+- mirror-core
+- rtac
 ---
 
 <p>You can now watch my thesis defense on computational reflection in intensional type theory.
